fix: copy button and overflow issues

--- a/src/components/ComponentDemo/Code/Code.module.scss
+++ b/src/components/ComponentDemo/Code/Code.module.scss
@@ -1,5 +1,9 @@
 .row {
+  grid-area: editor;
+  max-width: 100%;
+  overflow-x: auto;
   margin-top: 0;
+  position: relative;
   font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono',
     'Bitstream Vera Sans Mono', Courier, monospace;
   color: $inverse-01;
@@ -8,8 +12,9 @@
 
 .container {
   position: relative;
+  max-height: 320px;
+  overflow-y: auto;
   width: 100%;
-  padding: 6px; // 10px are hard-coded for react-simple-code-editor pointer events
   background-color: $ui-05;
 }
 
@@ -48,7 +53,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  bottom: 16px;
+  bottom: 0;
   padding: 8px;
   padding-left: 32px;
   display: flex;
